# gto-poker-simulator

./: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
src/api/: main.py  schemas.py
src/core/: game_state.py  history_repository.py  logger.py
src/gto_poker_simulator/: strategy_logic.py
static/: index.html
static/css/: style.css
static/js/: main.js
